# trabix-bot

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  Dockerfile  Implementation_&_Deployment_Document.md  LICENSE  README.md
assets/simulator/: index.html  simulator.css  simulator.js
config/: messages.toml  referrals.toml
general_info/: Business_Requirements_Document.md  Flow_Design_Diagram.mermaid  Flow_Design_Diagram_simple.mermaid  Flow_Design_Diagram_v2.mermaid  Software_Design_Document.md  complex_diagram.mermaid  current_runtime_reference.md  customer_message_inventory.md  mermaid2.mermaid  mermaidv1.mermaid  notes.md  simple_diagram.mermaid
general_info/phase_planning/: diferencias_finales.md  phase1.md  phase1validation.md  phase2.md  phase2validation.md  phase3.md  phase3validation.md  phase4.md  phase4validation.md
migrations/: 001_create_conversations.sql  002_create_orders.sql  003_create_order_items.sql  004_add_order_schedule_text.sql  005_create_simulator_tables.sql  006_add_referral_fields.sql
scripts/: run_simulator.bat  run_simulator.ps1  run_simulator.sh
src/: config.rs  engine.rs  lib.rs  logging.rs  main.rs  messages.rs  referrals.rs  transport.rs
src/bot/: inactivity.rs  mod.rs  pricing.rs  state_machine.rs  timers.rs
src/bot/states/: advisor.rs  checkout.rs  menu.rs  (+6 more)
src/db/: mod.rs  models.rs  queries.rs
src/routes/: legal.rs  mod.rs  simulator.rs  verify.rs  webhook.rs
src/simulator/: mod.rs  web.rs
src/whatsapp/: buttons.rs  client.rs  mod.rs  types.rs
tests/: live_db.rs  live_whatsapp.rs  phase2_flow.rs
